--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "bulma": "^0.9.3",
     "sass": "^1.42.1",
-    "svelte": "^3.37.0",
     "svelte-preprocess": "^4.9.8",
     "vite": "^2.6.4"
   },
   "dependencies": {
+    "svelte-chartjs": "^1.1.1",
     "svelte-table": "^0.3.1"
   }
 }
