--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "svelte-chartjs": "^1.1.1",
+    "svelte-spa-router": "^3.2.0",
     "svelte-table": "^0.3.1"
   }
 }
